--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 
     <!-- Custom styles for this template -->
     <link href="css/resume.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   </head>
 
@@ -61,9 +63,11 @@
             <span class="text-primary">Autrey</span>
           </h1>
           <div class="subheading mb-5">
-            <a href="mailto:acoburn4@gmail.com">acoburn4@gmail.com</a>
+            <a href="mailto:acoburn4@gmail.com">PRODUCT MANAGER / USER ADVOCATE / DEVELOPER</a>
           </div>
-          <p class="lead mb-5">I've been in the digital marketing space for 16+ years, and have technical, business, and management experience. I always lead with a “user-first” perspective, which grounds my problem solving and allows me to make decisions that impact the bottom line.</p>
+          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it:<br /><br /> The people <strong>building</strong> the business,<br/> the people <strong>consuming</strong> the business,<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
+          Their combined perspective contributes to a product vision that is just <strong>worth</strong> developing and realizing.</p>
+          <p class="lead mb-5">"Be Stubborn on Vision, But Flexible on Details" - Jeff Bezos</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/aautrey4/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
