--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           </div>
           <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it:<br /><br /> The people <strong>building</strong> the business,<br/> the people <strong>consuming</strong> the business,<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
           Their combined perspective contributes to a product vision that is just <strong>worth</strong> developing and realizing.</p>
-          <p class="lead mb-5">"Be Stubborn on Vision, But Flexible on Details" - Jeff Bezos</p>
+          <p class="lead mb-5">"Be stubborn on vision, but flexible on details" - Jeff Bezos</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/aautrey4/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
