--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
             <a class="nav-link js-scroll-trigger" href="#hi">The Call</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+            <a class="nav-link js-scroll-trigger" href="#portfolio">The Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
+            <a class="nav-link js-scroll-trigger" href="#resume">The Background</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
