--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <div class="subheading mb-5">
             PRODUCT MANAGER / USER ADVOCATE / DEVELOPER
           </div>
-          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it:<br /><br /> The people <strong>building</strong> the business,<br/> the people <strong>consuming</strong> the business,<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
+          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it:<br /><br /> The people <strong>consuming</strong> the business,<br/> the people <strong>building</strong> the business,<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
           Their combined perspective contributes to a product vision that is just <strong>worth</strong> developing and realizing.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/aautrey4/" target="_blank">
