--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
           <div class="subheading mb-5">
             PRODUCT MANAGER / USER ADVOCATE / DEVELOPER
           </div>
-          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it:<br /><br /> The people <strong>consuming</strong> the business,<br/> the people <strong>building</strong> the business,<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
-          Their combined perspective contributes to a product vision that is just <strong>worth</strong> developing and realizing.</p>
+          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it.<br /><br /> The people <strong>consuming</strong> the business;<br/> the people <strong>building</strong> the business;<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
+          Their combined perspective contributes to a product vision that is <strong>worth</strong> developing and realizing.</p>
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/aautrey4/" target="_blank">
               <i class="fab fa-linkedin-in"></i>
@@ -91,7 +91,8 @@
           <h2 class="mb-5">Portfolio</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            stuff goes here
+           <img src="img/lolla.png" width="auto" height="auto">
+           Lollapalooza.com
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
