--- a/index.html
+++ b/index.html
@@ -63,21 +63,23 @@
             <span class="text-primary">Autrey</span>
           </h1>
           <div class="subheading mb-5">
-            PRODUCT MANAGER / USER ADVOCATE / DEVELOPER
+            PRODUCT / BUSINESS / DEVELOPER
           </div>
-          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it.<br /><br /> The people <strong>consuming</strong> the business;<br/> the people <strong>building</strong> the business;<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
+          <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it.<br /><br /> The people <strong>consuming</strong> the business,<br/> the people <strong>building</strong> the business, and<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
           Their combined perspective contributes to a product vision that is <strong>worth</strong> developing and realizing.</p>
           <div class="social-icons">
-            <a href="https://www.linkedin.com/in/aautrey4/" target="_blank">
+            <a href="https://www.linkedin.com/in/aautrey4/" title="Connect with April Autrey on LinkedIn" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://github.com/aautrey4" target="_blank">
+            <!--
+            <a href="https://github.com/aautrey4" title="Follow April Autrey on Github" target="_blank">
               <i class="fab fa-github"></i>
             </a>
-            <a href="https://twitter.com/aautrey4" target="_blank">
+            -->
+            <a href="https://twitter.com/aautrey4" title="Follow April Autrey on Twitter" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.facebook.com/aautrey4" target="_blank">
+            <a href="https://www.facebook.com/aautrey4" title="" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
           </div>
@@ -91,20 +93,29 @@
           <h2 class="mb-5">Portfolio</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-           <img src="img/lolla.png" width="auto" height="auto">
-           Lollapalooza.com
+           <!--<img src="img/lolla.png" width="auto" height="auto">-->
+           <iframe width="560" height="315" src="https://www.lollapalooza.com/" frameborder="0" allowfullscreen></iframe>
+            <p>Lollapalooza Music Festival</p>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            stuff goes here
+            <iframe width="560" height="315" src="https://www.volusion.com/" frameborder="0" allowfullscreen></iframe>
+            <p>Volusion</p>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            stuff goes here
+            <iframe width="560" height="315" src="https://www.mozu.com/" frameborder="0" allowfullscreen></iframe>
+            <p>Mozu</p>
           </div>
 
           <div class="resume-item d-flex flex-column flex-md-row">
-            stuff goes here
+            <iframe width="560" height="315" src="https://www.choosewhat.com/" frameborder="0" allowfullscreen></iframe>
+            <p>ChooseWhat</p>
+          </div>
+
+          <div class="resume-item d-flex flex-column flex-md-row">
+            <iframe width="560" height="315" src="https://www.faxcompare.com/" frameborder="0" allowfullscreen></iframe>
+            <p>FaxCompare</p>
           </div>
 
         </div>
