--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <span class="text-primary">Autrey</span>
           </h1>
           <div class="subheading mb-5">
-            PRODUCT / BUSINESS / DEVELOPER
+           BUSINESS, MARKETING, & TECHNICAL PROFESSIONAL
           </div>
           <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it.<br /><br /> The people <strong>consuming</strong> the business,<br/> the people <strong>building</strong> the business, and<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
           Their combined perspective contributes to a product vision that is <strong>worth</strong> developing and realizing.</p>
