--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     <title>April Autrey | Business, Marketing, & Tech Professional</title>
 
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-WLQ9WSF');</script>
+    <!-- End Google Tag Manager -->
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -26,6 +34,11 @@
   </head>
 
   <body id="page-top">
+
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WLQ9WSF"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
@@ -63,7 +76,7 @@
             <span class="text-primary">Autrey</span>
           </h1>
           <div class="subheading mb-5">
-           BUSINESS, MARKETING, & TECHNICAL PROFESSIONAL
+           BUSINESS, MARKETING, & TECH PROFESSIONAL
           </div>
           <p class="lead mb-5">Business is nothing without the <strong>people</strong> behind it.<br /><br /> The people <strong>consuming</strong> the business,<br/> the people <strong>building</strong> the business, and<br />the people <strong>observing</strong> the business.<br /><br/>I'm passionate about <strong>all those people</strong>.<br /> 
           Their combined perspective contributes to a product vision that is <strong>worth</strong> developing and realizing.</p>
@@ -88,39 +101,201 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="portfolio">
-        <div class="my-auto">
-          <h2 class="mb-5">Portfolio</h2>
+      <!-- Page Content -->
+    <div class="container">
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-           <!--<img src="img/lolla.png" width="auto" height="auto">-->
-           <iframe width="560" height="315" src="https://www.lollapalooza.com/" frameborder="0" allowfullscreen></iframe>
-            <p>Lollapalooza Music Festival</p>
+      <!-- Page Heading -->
+      <h1 class="my-4">Portfolio<br />
+        <small>Websites</small>
+      </h1>
+
+       <div class="row">
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.lollapalooza.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Lollapalooza International Music Festival</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
           </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <iframe width="560" height="315" src="https://www.volusion.com/" frameborder="0" allowfullscreen></iframe>
-            <p>Volusion</p>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <iframe width="560" height="315" src="https://www.mozu.com/" frameborder="0" allowfullscreen></iframe>
-            <p>Mozu</p>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <iframe width="560" height="315" src="https://www.choosewhat.com/" frameborder="0" allowfullscreen></iframe>
-            <p>ChooseWhat</p>
-          </div>
-
-          <div class="resume-item d-flex flex-column flex-md-row">
-            <iframe width="560" height="315" src="https://www.faxcompare.com/" frameborder="0" allowfullscreen></iframe>
-            <p>FaxCompare</p>
-          </div>
-
         </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Austin City Limits Music Festival</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.volusion.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Volusion</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Mozu</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.choosewhat.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">ChooseWhat</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.faxcompare.com" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">FaxCompare</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
 
-      </section>
+      <br /><br />
+
+      <hr class="m-0">
+      
+      <!-- Page Heading -->
+      <h1 class="my-4">
+        <small>Mobile Apps</small>
+      </h1>
+
+       <div class="row">
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://itunes.apple.com/us/app/innings-festival/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Innings Music Festival</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Bonnaroo Music & Arts Experience</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+
+      <br /><br />
+
+      <hr class="m-0">
+      
+      <!-- Page Heading -->
+      <h1 class="my-4">
+        <small>E-mail Newsletters</small>
+      </h1>
+
+       <div class="row">
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.lollapalooza.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Lollapalooza International Music Festival</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Austin City Limits Music Festival</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.volusion.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Volusion</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">Mozu</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.choosewhat.com/" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">ChooseWhat</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 portfolio-item">
+          <div class="card h-100">
+            <a href="#"><iframe width="538" height="308" src="https://www.faxcompare.com" frameborder="0" allowfullscreen></iframe></a>
+            <div class="card-body">
+              <h4 class="card-title">
+                <a href="#">FaxCompare</a>
+              </h4>
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->   
+
 
       <hr class="m-0">
 
