--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <a class="nav-link js-scroll-trigger" href="#hi">The Call</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">The Work</a>
+            <a class="nav-link js-scroll-trigger" href="#the-work">The Work</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#resume">The Background</a>
@@ -105,7 +105,7 @@
     <div class="container">
 
       <!-- Page Heading -->
-      <h1 class="my-4">Portfolio<br />
+      <h1 class="my-4" id="the-work">The Work<br />
         <small>Websites</small>
       </h1>
 
