--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a class="nav-link js-scroll-trigger" href="#the-work">The Work</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#resume">The Background</a>
+            <a class="nav-link js-scroll-trigger" href="#the-background">The Background</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -299,9 +299,9 @@
 
       <hr class="m-0">
 
-      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="resume">
+      <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="the-background">
         <div class="my-auto">
-          <h2 class="mb-5">Resume</h2>
+          <h2 class="mb-5">The Background</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
               <h3 class="mb-0">Download April Autrey's Resume</h3>
