Updating Style of Resume Link

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <h2 class="mb-5">The Background</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <h3 class="mb-0">Download April Autrey's Resume</h3>
+              <p class="mb-0">Download April Autrey's Resume</p>
           </div>
         </div>
       </section>
