--- a/index.html
+++ b/index.html
@@ -314,6 +314,9 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="contact">
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+              <p class="mb-0">If you would like to get in touch, please contact me at <a href="mailto:acoburn4@gmail.com">acoburn4@gmail.com</a></p>
+          </div>
         </div>
       </section>
 
