--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
           <h2 class="mb-5">The Background</h2>
 
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <p class="mb-0">Download April Autrey's Resume</p>
+              <p class="mb-0">Download April Autrey's resume</p>
           </div>
         </div>
       </section>
@@ -315,7 +315,7 @@
         <div class="my-auto">
           <h2 class="mb-5">Contact</h2>
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
-              <p class="mb-0">If you would like to get in touch, please contact me at <a href="mailto:acoburn4@gmail.com">acoburn4@gmail.com</a></p>
+              <p class="mb-0">If you would like to get in touch, please contact me at <a href="mailto:acoburn4@gmail.com">acoburn4@gmail.com</a>.</p>
           </div>
         </div>
       </section>
