--- a/index.html
+++ b/index.html
@@ -112,10 +112,10 @@
        <div class="row">
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.lollapalooza.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="https://www.lollapalooza.com/" title="Lollapalooza" target="_blank"><img class="card-img-top" src="img/lolla.jpg" alt="Lollapalooza International Music Festival"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Lollapalooza International Music Festival</a>
+                <a href="https://www.lollapalooza.com/" title="Lollapalooza" target="_blank">Lollapalooza International Music Festival</a>
               </h4>
               <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>-->
             </div>
@@ -123,7 +123,7 @@
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="#" title="" target="_blank"><img class="card-img-top" src="img/aclfest.jpg" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Austin City Limits Music Festival</a>
@@ -134,7 +134,7 @@
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.volusion.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="https://www.volusion.com/" title="Ecommerce Website Store & Shopping Cart Software" target="_blank"><img class="card-img-top" src="img/volusion.jpg" alt="Volusion"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Volusion</a>
@@ -145,7 +145,7 @@
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a href="https://www.mozu.com/" title="Enterprise Commerce Software" target="_blank"><img class="card-img-top" src="img/mozu.jpg" alt="Mozu"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">Mozu</a>
@@ -156,7 +156,7 @@
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.choosewhat.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="https://www.choosewhat.com/" title="Steps to Starting a Small Business"><img class="card-img-top" src="img/choosewhat.jpg" alt="ChooseWhat"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">ChooseWhat</a>
@@ -167,12 +167,12 @@
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.faxcompare.com" frameborder="0" allowfullscreen></iframe></a>
+            <a href="#"><img class="card-img-top" src="img/faxcompare.jpg" alt="FaxCompare"></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a href="#">FaxCompare</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>-->
             </div>
           </div>
         </div>
@@ -191,23 +191,23 @@
        <div class="row">
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://itunes.apple.com/us/app/innings-festival/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="#"><img class="card-img-top" src="img/govball.jpg" alt="Governor's Ball Music Festival"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Innings Music Festival</a>
+                <a href="#">Governor's Ball Music Festival iOS & Android Mobile App</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>-->
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="#"><img class="card-img-top" src="img/innings.jpg" alt="Innings Festival"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Bonnaroo Music & Arts Experience</a>
+                <a href="#">Innings Music Festival iOS & Android Mobile App</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>-->
             </div>
           </div>
         </div>
@@ -231,18 +231,18 @@
               <h4 class="card-title">
                 <a href="#">Lollapalooza International Music Festival</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+              <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>-->
             </div>
           </div>
         </div>
         <div class="col-lg-6 portfolio-item">
           <div class="card h-100">
-            <a href="#"><iframe width="538" height="308" src="https://www.aclfestival.com/" frameborder="0" allowfullscreen></iframe></a>
+            <a href="https://us12.campaign-archive.com/home/?u=d04dd26cc69771493fb438748&id=d7cca212db" target="_blank"><img class="card-img-top" src="img/bonnaroo-email.jpg" alt="Bonnaroo Festival"></a>
             <div class="card-body">
               <h4 class="card-title">
-                <a href="#">Austin City Limits Music Festival</a>
+                <a href="https://us12.campaign-archive.com/home/?u=d04dd26cc69771493fb438748&id=d7cca212db" target="_blank">Bonnaroo</a>
               </h4>
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>
+              <!--<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit aliquam aperiam nulla perferendis dolor nobis numquam, rem expedita, aliquid optio, alias illum eaque. Non magni, voluptates quae, necessitatibus unde temporibus.</p>-->
             </div>
           </div>
         </div>
